# yolo_ros2_ws

./: .gitignore  README.md  requirements.txt
python-tool/: check_depth_ima.ipynb  realsense_align.py  realsense_capture.py  realsense_get_depth_info.py
src/yolov8_ros2/: package.xml  setup.cfg  setup.py
src/yolov8_ros2/config/: yolov8_config.yaml
src/yolov8_ros2/launch/: yolov8_launch.py
src/yolov8_ros2/yolo_launch/: CMakeLists.txt  package.xml
src/yolov8_ros2/yolo_launch/launch/: yolov8_launch.py
src/yolov8_ros2/yolov8_ros2/: setup.cfg  setup.py  yolov8_node.py
src/yolov8_ros2/yolov8_ros2/yolov8_ros2/: yolov8_node.py
src/yolov8_ros2/yolov8_ros2_msgs/: CMakeLists.txt
src/yolov8_ros2/yolov8_ros2_msgs/msg/: BoundingBoxes.msg
src/yolov8_ros2_msgs/: CMakeLists.txt  package.xml
src/yolov8_ros2_msgs/msg/: BoundingBox.msg
ultralytics/: default_copy.yaml  predict.ipynb  predict_test.py  yolo-bvn.yaml  yolov8n-train.py
ultralytics/ultralytics/engine/: model.py
yolo_ros2_ws/: CAMERA_CONFLICT_FIX.md  LAUNCH_FIX_GUIDE.md  LIBEXEC_FIX_GUIDE.md  test_fixed_launch.sh  test_launch_fix.sh
yolo_ros2_ws/src/yolov8_ros2/yolo_launch/: CMakeLists.txt  package.xml
yolo_ros2_ws/src/yolov8_ros2/yolo_launch/launch/: yolov8_distance_node.launch.py
yolo_ros2_ws/src/yolov8_ros2/yolov8_ros2/: package.xml  setup.cfg  setup.py
yolo_ros2_ws/src/yolov8_ros2/yolov8_ros2/config/: yolov8_config.yaml
yolo_ros2_ws/src/yolov8_ros2/yolov8_ros2/yolov8_ros2/: yolov8_distance_node.py  yolov8_node.py
yolo_ros2_ws/src/yolov8_ros2/yolov8_ros2_msgs/: package.xml
(+1 files in other folders)
