<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_launch</name>
  <version>0.0.0</version>
  <description>YOLO for ROS 2</description>
  <maintainer email="3082128164@qq.com">qyw23AI</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>yolov8_ros2</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>